# indsl

./: .all-contributorsrc  .bulldozer.yml  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PUBLISHING.md  README.md  SECURITY.md  TRANSLATIONS.md  build_docs.sh  bump_library.sh  publish_library.sh  pyproject.toml  renovate.json
.function-preview/: package.json
.function-preview/.storybook/: preview.js
.function-preview/get_operations/: data_science_service.py  main.py  models.py  schemas.py  typing_utils.py  versioning.py
.function-preview/src/: InDSLFunction.stories.tsx  index.tsx
.github/: CODEOWNERS  dependency-review-config.yml  pull_request_template.md
.github/workflows/: code-quality.yaml  codeql-analysis.yml  dependencies.yml  docs.yaml  lint-pr.yml  publish.yaml  push-locize.yaml  visual-testing.yml
datasets/data/: brownian_noise_wave.csv  density_pr_tmp.csv  hour_count.csv  pd_series_HCV.pkl  press_temp_bh&wh.csv  press_temp_bh&wh.pkl  pump_curve.csv  pump_data.pkl  pvt_data.csv  pvt_data.pkl  seasonal_with_trend_data.csv  shut_down_valve.csv  suct_pressure_barg.csv  synthetic_industrial_data.py  ts_value_reduction_data.csv  valve_data.pkl  vol_flow_rate_m3h.csv
docs/: CHANGELOG.html  CNAME  code_of_conduct.html  contribute.html  data_quality.html  detect.html  dev_tools.html  drilling.html  equipment.html  filter.html  fluid_dynamics.html  forecast.html  genindex.html  index.html  numerical_calculus.html  objects.inv  oil_and_gas.html  py-modindex.html  resample.html  search.html  searchindex.js  sg_execution_times.html  signals.html  smooth.html  statistics.html  sustainability.html  ts_utils.html  units.html
docs-source/: Makefile
docs-source/source/: CHANGELOG.md  code_of_conduct.rst  conf.py  contribute.rst  data_quality.rst  detect.rst  dev_tools.rst  drilling.rst  equipment.rst  filter.rst  fluid_dynamics.rst  index.rst  numerical_calculus.rst  resample.rst  signals.rst  smooth.rst  statistics.rst  ts_utils.rst
docs/_sources/: CHANGELOG.md.txt  changelog.rst.txt  contribute.rst.txt  data_quality.rst.txt  drilling.rst.txt  equipment.rst.txt  fluid_dynamics.rst.txt  forecast.rst.txt  index.rst.txt  oil_and_gas.rst.txt  resample.rst.txt  sg_execution_times.rst.txt  smooth.rst.txt  statistics.rst.txt  sustainability.rst.txt  ts_utils.rst.txt  units.rst.txt
docs/_static/: documentation_options.js
docs/auto_examples/: index.html  sg_execution_times.html
examples/: README.rst
examples/data_quality/: README.rst  plot_datapoint_diff.py  plot_extreme_outlier.py  plot_out_of_range.py  plot_rolling_stddev_timedelta.py  plot_value_decrease_check.py
examples/detect/: README.rst  plot_oscillation_detection.py  plot_ssd_cpd.py  plot_unchanged_signal_detection.py
examples/equipment/: README.rst  plot_mean_time_between_failures.py  plot_operational_availability.py  plot_pump_parameters.py  plot_recycle_valve_power_loss.py
examples/filter/: README.rst  plot_hilbert_huang_transform.py  plot_wavelet_filter.py
examples/fluid_dynamics/: README.rst  darcy_friction_factor.py  plot_darcy_friction_factor.py
examples/forecast/: README.rst  plot_holt_winters_predictor.py
examples/numerical_calculus/: README.rst  plot_sliding_window_integration.py
examples/oil_and_gas/: README.rst  plot_gas_density_calcs.py  plot_live_fluid_properties.py  plot_shut_in_detector.py  plot_shut_in_variables.py  plot_well_prod_status.py
examples/reindex/: README.rst  plot_mock_scatter_plot.py  plot_reindex_and_pearson_correlation.py
examples/resample/: README.rst  plot_group_by_region.py
examples/signals/: README.rst  plot_synthetic_gaps.py
examples/smooth/: README.rst  plot_ma.py  plot_sg_smooth.py
examples/statistics/: README.rst  plot_detect_outliers_001.py  plot_detect_outliers_002.py  plot_remove_outliers.py  plot_rolling_stddev.py
examples/sustainability/: README.rst  plot_cumulative_co2.py
examples/ts_utils/: README.rst  plot_rolling_stddev.py  plot_rolling_variance.py
examples/versioning/: README.rst  versioned_function.py
indsl/: __init__.py  _version.py  create_translation_key.py  decorators.py  exceptions.py  parse_docstrings.py  type_check.py  validations.py  versioning.py  warnings.py
indsl/data_quality/: __init__.py  completeness.py  datapoint_diff.py  gaps_classification.py  gaps_identification.py  low_density_identification.py  outliers.py  rolling_stddev.py  value_decrease_indication.py  value_decrease_indication_v1.py
indsl/detect/: __init__.py  change_point_detector.py  cusum.py  drift_detector.py  drift_detector_v1.py  oscillation_detector.py  steady_state.py  unchanged_signal_detector.py  utils.py
indsl/drilling/: __init__.py  doc.py  flag_detection.py  mse.py  state_stand.py
indsl/equipment/: __init__.py  health_index.py  mean_time_between_failures_.py  operational_availability.py  operational_availability_.py  pump_parameters.py  valve_parameters.py  valve_parameters_.py  volume_vessel.py
indsl/filter/: __init__.py  hilbert_huang_transform.py  simple_filters.py  wavelet_filter.py  wavelet_filter_v1.py
indsl/fluid_dynamics/: __init__.py  constants.py  dimensionless.py  friction.py
indsl/forecast/: __init__.py  arma_predictor.py  holt_winters_predictor.py
indsl/not_listed_operations/: __init__.py  deprecated_functions.py  utils.py  versioning_test.py  versioning_test_v1.py
indsl/oil_and_gas/: __init__.py  engineering_calcs.py  gas_density_calcs.py  live_fluid_properties.py  shut_in_detector.py  shut_in_variables.py  tab_fp_identifier.json  well_prod_status.py
indsl/regression/: __init__.py  polynomial.py
indsl/resample/: README.md  __init__.py  auto_align.py  group_by.py  interpolate.py  interpolate_v1.py  mock_scatter_plot.py  reindex.py  reindex_v1.py  resample.py  resample_v1.py
indsl/signals/: __init__.py  generator.py  noise.py  polynomial.py  sequence_interpolation.py  user_specified_timeseries.py
tests/: conftest.py  generate_data.py  test_docstrings.py  test_parse_docstrings.py  test_versioning.py
translations/: create_translation_json.py
(+519 files in other folders)
