[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indsl"
version = "8.9.1"
description = "Industrial Data Science Library by Cognite"
authors = [{ name = "Cognite" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.15"
classifiers = ["Topic :: Scientific/Engineering"]
dependencies = [
    "scipy~=1.17.0",
    "pandas~=3.0.1",
    "typeguard>=4.0.0,<5",
    "packaging>=26.0,<27",
    "numpy>=2.0.0,<3",
    "pywavelets>=1.6.0,<2",
]

[project.urls]
Homepage = "https://indsl.docs.cognite.com"
Repository = "https://github.com/cognitedata/indsl"
Documentation = "https://indsl.docs.cognite.com"

[project.optional-dependencies]
numba = ["numba>=0.65,<0.66"]
plot = ["matplotlib>=3.4.0,<4"]
modeling = ["csaps>=1.1.0,<2", "kneed>=0.8.0,<0.9"]
stats = ["statsmodels>=0.14.0,<0.15"]
scikit = ["scikit-image>=0.26.0,<0.27", "scikit-learn>=1.3.0,<2"]
fluids = ["fluids>=1.0.22,<2"]
all = ["indsl[numba,plot,modeling,stats,scikit,fluids]"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0,<5",
    "ipykernel>=7.0.0,<8",
    "pytest-cov>=7,<8",
    "commitizen>=4.11.6,<5",
    "docstring-parser>=0.18,<0.19",
    "docstring-to-markdown>=0.17,<0.18",
    "coverage>=7.0.0,<8",
    "ruff>=0.15.0,<0.16",
    "pytest>=9.0.2,<10",
    "requests>=2.0.0",
]
docs = [
    "ipykernel>=7.0.0,<8",
    "matplotlib>=3.4.0,<4",
    "pytest-cov>=7,<8",
    "commitizen>=4.11.6,<5",
    "docstring-parser>=0.18,<0.19",
    "docstring-to-markdown>=0.17,<0.18",
    "myst-parser>=5.0.0,<6",
    "coverage>=7.0.0,<8",
    "Sphinx<9.2",
    "sphinx-rtd-theme>=3.0.0,<4",
    "nbsphinx>=0.9.0,<0.10",
    "sphinx-gallery>=0.21,<0.22",
    "sphinx-prompt>=1.10.0,<2",
]

[tool.ruff]
# Keep in sync with .pre-commit-config.yaml
line-length = 120
target-version = "py311"
exclude = ["tests", "examples", "docs-source", "docs"]

[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint]
# E501: line too long
# E731: do not assign a lambda expression, use a def
# W605: invalid escape sequence
# D100: Missing docstring in public module
# D104: Missing docstring in public package
# D105: Missing docstring in magic method
# RUF002: Missing docstring in public function
ignore = ["E501", "D100", "D104", "RUF002"]
select = ["D", "E", "W",  "F", "I", "T", "RUF", "TID", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1
split-on-trailing-comma = false
known-third-party = ["pytest"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "8.9.1"
tag_format = "v$version"
version_provider = "pep621"
version_files = ["pyproject.toml:version", "indsl/_version.py:__version__"]

[tool.pyright]
# Added just so pylance in vscode doesn't complain too much
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["indsl"]
ignore = ["tests"]
reportImportCycles = false
reportMissingTypeStubs = false
reportMissingImports = false
reportShadowedImports = "none"
reportUnnecessaryTypeIgnoreComment = false
reportUnusedImport = true
reportUnusedVariable = true
reportUnnecessaryIsInstance = true
reportUnnecessaryComparison = true
reportUnnecessaryCast = true
reportPrivateUsage = true
reportDuplicateImport = true
reportConstantRedefinition = true
reportOverlappingOverload = true
reportInconsistentConstructor = true
reportImplicitStringConcatenation = true

[tool.pytest.ini_options]
markers = [
    "core: Unit tests for the core library functions",
    "extras: Unit tests for the optional extras functions"
]
addopts = "--cov=indsl --cov-report=html --cov-branch"
testpaths = "tests/"
filterwarnings = [
    # Pickle files created with older numpy reference numpy.core internals
    "ignore:numpy.core.*is deprecated:DeprecationWarning",
    # statsmodels optimizer convergence is model/data dependent, not a code bug
    "ignore:Maximum Likelihood optimization failed to converge:statsmodels.tools.sm_exceptions.ConvergenceWarning",
    # kneed third-party library warnings for edge-case input data
    "ignore:Polyfit may be poorly conditioned",
    "ignore:invalid value encountered in divide:RuntimeWarning",
]
log_level = "INFO"
log_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_date_format="%Y-%m-%d %H:%M:%S"
